<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_goby3_gateway</name>
  <version>0.0.0</version>
  <description>Gateway application to connect ROS2 to the Goby3 middleware</description>
  <maintainer email="toby@gobysoft.org">Toby Schneider</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

</package>
